# fearful_stars

./: .gitignore  CMakeLists.txt  README.md  res.py  todo.md
.cache/clangd/index/: cgltf.h.429D31B1B6FF3E69.idx  config.h.55BF02C3BAFCE574.idx  context.c.20F577B1F0AAAC29.idx  dr_mp3.h.B97C6A5AB1B073AA.idx  dr_wav.h.4A56F8532A5AADCD.idx  egl_context.c.EF2BE4D6210B25FD.idx  glad.h.B746646CE890C2A1.idx  glfw3.h.6AF8A6089AD7F47C.idx  glfw3native.h.2F4C1B994CF2B9A2.idx  glx_context.c.B6926858B73D98E4.idx  init.c.9B942499C94F4A0E.idx  input.c.6CE13891CFAACF2D.idx  internal.h.75CF064E1EFA100C.idx  jar_mod.h.DD357987F4991B1F.idx  jar_xm.h.2C2AC741996EA36A.idx  linux_joystick.c.CE53A2B7EBDA3ED5.idx  linux_joystick.h.C942F84EB0B9EEDA.idx  m3d.h.37E228BA1DAF1F89.idx  main.cpp.CF5D98634FA963D9.idx  mappings.h.0B0AA63351F4BDFE.idx  miniaudio.h.009AED179DB95C73.idx  monitor.c.26A2529186251B52.idx  msf_gif.h.FCFBA3272E268D47.idx  null_init.c.E482FE2B219FFE82.idx  null_joystick.c.FE819ABDCE3B3BE6.idx  null_joystick.h.E124C39DFB2D1869.idx  null_monitor.c.C12881FDFB88FF6D.idx  null_platform.h.0CB00BA91D5DE1E0.idx  null_window.c.8244EF311D7C696E.idx  osmesa_context.c.FD835543B7696363.idx  par_shapes.h.F8FB1F28BF1A5C7C.idx  platform.c.74BD5D754B23AF01.idx  platform.h.6B8B37B3ED5A7EC1.idx  posix_module.c.FB01EBE91968EF0D.idx  posix_poll.c.9662ADB172C43B42.idx  (+44 more)
include/: raymath.h
src/: control_schema.hpp  deps.hpp  draw_loop.cpp  globals.hpp  main.cpp  update_loop.cpp
src/gameplay/: entity.hpp  player.cpp  player.hpp  player_manager.cpp  player_manager.hpp  projectile.cpp  projectile.hpp
src/libs/: entity.hpp  input_man.cpp  input_man.hpp  loops.hpp  position.hpp  timer.hpp  utils.cpp  utils.hpp  winman.hpp
(+13 files in other folders)
